# easy_string

.github/workflows/: unit_test.yml
easy_string_project/: .gitignore  README.md  pyproject.toml
easy_string_project/.github/workflows/: unit_test.yml
easy_string_project/src/: main.py
easy_string_project/src/easy_string/: main.py
easy_string_project/tst/: test_easy_string.py
src/: easy_string.py
